--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
       <div class="wrapper">
         <div class="hero">
-          <img src="/images/illustration-hero.svg" alt="illustration-hero" />
+          <img src="./images/illustration-hero.svg" alt="illustration-hero" />
         </div>
 
         <div class="content">
