--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
           <div class="price-container">
             <div class="img-and-price">
-              <img src="/images/icon-music.svg" alt="icon-music-image" />
+              <img src="./images/icon-music.svg" alt="icon-music-image" />
               <p>Annual Plan <br /><span>$59.99/year</span></p>
             </div>
             <a href="#">Change</a>
