--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <div class="content">
           <div class="description">
-            <h2>Order Summary</h2>
+            <h1>Order Summary</h1>
             <p>
               You can now listen to millions of songs, audiobooks, and podcasts
               on any device anywhere you like!
@@ -36,8 +36,8 @@
             <a href="#">Change</a>
           </div>
 
-          <button class="btn btn-payment" href="#">Proceed to Payment</button>
-          <button class="btn btn-cancel" href="#">Cancel Order</button>
+          <button class="btn btn-payment">Proceed to Payment</button>
+          <button class="btn btn-cancel">Cancel Order</button>
         </div>
       </div>
     </main>
